--- a/PROJECTS/project_1/style.css
+++ b/PROJECTS/project_1/style.css
@@ -2,7 +2,7 @@
     background: #0091ff;
     background: -webkit-linear-gradient(to top,#0091ff,#32cd4c);
     background: linear-gradient(to top,#0091ff,#32cd4c);
-    -webkit-background-clip: text;
+    /* -webkit-background-clip: text; */
     color: transparent;
 }
 .banner-holder, .main-page-header{
